--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fontsource/poppins": "^5.2.5",
     "@radix-ui/react-slot": "^1.1.2",
     "@reduxjs/toolkit": "^2.6.0",
+    "@tanstack/react-query": "^5.76.2",
     "appwrite": "^17.0.0",
     "class-variance-authority": "^0.7.1",
     "framer-motion": "^12.6.2",
